scenarios/capsule/03-ingress_hostnames/ingress-clastix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clastix
spec:
  rules:
  - host: capsule.clastix.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: jobs.clastix.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
