scenarios/capsule/03-ingress_hostnames/ingress-cncf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cncf
spec:
  rules:
  - host: www.cncf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
  - host: cncf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
