scenarios/capsule/03-ingress_hostnames/ingress-no-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-hostname
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
